--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <div class="h-screen w-screen" id="root"></div>
+    <div class="h-screen w-screen overflow-hidden" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
